[package]
name = "typst_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "typst_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
ecow = "0.2"
parking_lot = "0.12"
rustler = "0.36"
typst = "0.13"
typst-kit = "0.13"
typst-pdf = "0.13"
typst-svg = "0.13"
typst-timing = "0.13"
