[package]
name = "typst_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "typst_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[dependencies]
chrono = "0.4"
ecow = "0.2"
parking_lot = "0.12"
rustler = { version = "0.37", default-features = false, features = ["derive"] }
typst = "0.14"
typst-kit = "0.14"
typst-pdf = "0.14"
typst-html = "0.14"
typst-svg = "0.14"
typst-timing = "0.14"
